# voice2task-posttraining

./: .gitignore  CONTEXT.md  LICENSE  README.md  README_en.md  pyproject.toml
configs/: baselines.json  copy-backed-scope-policy-v1.json  copy-backed-scope-policy-v2.proposed.json  dpo-a100.json  dpo-dev.json  sft-a100-canonical-slot-paired-control-dev-prediction.json  sft-a100-canonical-slot-paired-control-test-prediction.json  sft-a100-canonical-slot-paired-control.json  sft-a100-canonical-slot-paired-treatment-dev-prediction.json  sft-a100-canonical-slot-paired-treatment-test-prediction.json  sft-a100-canonical-slot-paired-treatment.json  sft-a100-current-canonical-boundary-dev-prediction.json  sft-a100-current-canonical-boundary-test-prediction.json  sft-a100-current-tiny-adapter-heldout-dev-prediction.json  sft-a100-current-tiny-adapter-heldout-test-prediction.json  sft-a100-current-train-split-retry-dev-prediction.json  sft-a100-current-train-split-retry-test-prediction.json  sft-a100-current-train-split-retry.json  sft-a100-formal-public-heldout-dev-prediction.json  sft-a100-formal-public-heldout-test-prediction.json  sft-a100-hardened-canonical-policy-dev-prediction.json  sft-a100-hardened-canonical-policy-test-prediction.json  sft-a100-hardened-canonical-policy-train-prediction.json  sft-a100-public-heldout-dev-prediction.json  sft-a100-public-heldout-test-prediction.json  sft-a100-public-smoke.json  sft-a100-slot-value-candidate-probe-prediction.json  sft-a100-slot-value-candidate-probe.json  sft-a100-step-matched-canonical-slot-control-dev-prediction.json  (+13 more)
(+1422 files in other folders)
